Updated GUI, Controller methods and the creation of UpdateCaskCommonDialog.java for use across the system.